--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,17 @@ body {
 
 .content-wrapper {
 	display: flex;
-	flex-direction: column-reverse; 
+	flex-direction: column-reverse;
 	width: 100%;
-	max-width: 1200px; 
+	max-width: 1200px;
 }
 
 header {
-	width: calc(100% - 2em); 
+	width: calc(100% - 2em);
 	max-width: 600px;
 	margin: 1em auto;
-	padding: 0 1em; 
-	box-sizing: border-box; 
+	padding: 0 1em;
+	box-sizing: border-box;
 }
 
 main {
@@ -35,8 +35,8 @@ main {
 	background-color: #fff;
 	border: 2px solid #189def;
 	border-radius: 8px;
-    max-width: 600px;
-    width: 80%;
+	max-width: 600px;
+	width: 80%;
 }
 
 main p {
@@ -49,28 +49,26 @@ main div {
 
 h1 {
 	color: #189def;
-    text-align: center;
+	text-align: center;
 }
 
 ul {
-    padding-inline-start: 1em;
+	padding-inline-start: 1em;
 }
 li {
-    text-align: justify;
-    padding-inline-start: 0.21em;
-
+	text-align: justify;
+	padding-inline-start: 0.21em;
 }
 
 p {
-    text-align: justify;
+	text-align: justify;
 }
 
 button {
-    margin: 0;
+	margin: 0;
 }
 
-
-.month-indicator, 
+.month-indicator,
 .month-indicator time {
 	color: #189def;
 	text-align: center;
@@ -79,12 +77,12 @@ button {
 
 .calendar,
 .calendar-description {
-    padding: 0.5em;
+	padding: 0.5em;
 }
 
-.calendar-description p, 
+.calendar-description p,
 .calendar-description ul {
-font-size: 80%;
+	font-size: 80%;
 }
 
 .day-of-week,
@@ -98,7 +96,7 @@ font-size: 80%;
 }
 
 .day-of-week > * {
-	font-size: 0.85em; 
+	font-size: 0.85em;
 	color: #189def;
 	font-weight: 500;
 	letter-spacing: 0.1em;
@@ -124,7 +122,7 @@ font-size: 80%;
 	background-color: transparent;
 	color: #189def;
 
-	margin: 5px; 
+	margin: 5px;
 	padding: 5px;
 	border: none;
 
@@ -149,7 +147,7 @@ font-size: 80%;
 	color: #4a4a4a;
 	transition: background-color 0.5s ease;
 	background-color: transparent;
-    font-weight: 600;
+	font-weight: 600;
 }
 
 div time {
@@ -158,31 +156,29 @@ div time {
 }
 
 .hover-text {
-        transition: all 0.5s ease;
-
+	transition: all 0.5s ease;
 }
 
 .hover-text:hover {
-    color:#189def;
-    transition: all 0.5s ease;
-    cursor: pointer;
+	color: #189def;
+	transition: all 0.5s ease;
+	cursor: pointer;
 }
 
 a {
-    text-decoration: none;
-    color: inherit
+	text-decoration: none;
+	color: inherit;
 }
 
-#text-a-destra{
-    display: none;
+#text-a-destra {
+	display: none;
 }
 
 @media (min-width: 1200px) {
 	header {
 		margin: 1em;
 		max-width: none;
-		width: auto; 
-		padding-left: 1.5em; /
+		width: auto;
 	}
 	.content-wrapper {
 		display: flex;
@@ -190,13 +186,12 @@ a {
 	}
 	main {
 		width: calc(50% - 2em);
-		margin: 1em; 
-		padding: 1.5em;
+		margin: 1em;
 	}
-    #text-sopra {
-        display: none;
-    }
-    #text-a-destra {
-        display: inline;
-    }
+	#text-sopra {
+		display: none;
+	}
+	#text-a-destra {
+		display: inline;
+	}
 }
